--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,14 +15,13 @@ repositories {
 
 dependencies {
 
+    implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '4.1.2'
+
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
-/*
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'*/
 }
 
 test {
