--- a/inventory/build.gradle
+++ b/inventory/build.gradle
@@ -18,6 +18,10 @@ repositories {
 dependencies {
     implementation project(':common')
 
+    // Swagger UI (OpenAPI tools)
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
