--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
 
     implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '4.1.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
