--- a/inventory/build.gradle
+++ b/inventory/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.2'
 }
@@ -9,6 +10,10 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
+}
+
+application {
+    mainClass = 'vez.reactive.inventory.InventoryApp'
 }
 
 repositories {
