--- a/inventory/build.gradle
+++ b/inventory/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.2'
 }
@@ -11,6 +12,10 @@ java {
     sourceCompatibility = '17'
 }
 
+application {
+    mainClass = 'vez.reactive.inventory.InventoryApp'
+}
+
 repositories {
     mavenCentral()
 }
@@ -20,7 +25,6 @@ dependencies {
 
     // Swagger UI (OpenAPI tools)
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
-
 
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
