--- a/shipping/build.gradle
+++ b/shipping/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.2'
 }
@@ -11,12 +12,19 @@ java {
     sourceCompatibility = '17'
 }
 
+application {
+    mainClass = 'vez.reactive.shipping.ShippingApp'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     implementation project(':common')
+
+    // Swagger UI (OpenAPI tools)
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
