--- a/shipping/build.gradle
+++ b/shipping/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'vez.reactive'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0-REACTIVE'
 
 java {
     sourceCompatibility = '17'
